src/test/06-Errors/error-empty-bracket.txt
error-empty-bracket.ck:1:13: syntax error
[1] new SinOsc[ ];
                ^
